add(server) authentication

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,6 +1,6 @@
 MONGO_USER = kristiyan
 MONGO_PASSWORD = yrppZIuYBL82FXUn
-MONGO_DATABASE = testFullStackTwitterClone
+MONGO_DATABASE = testFullStackCodetalker
 SECRET = testingIsGood
 CLIENT_URL = http://localhost:3000  
 SERVER_URL = https://localhost:8080  
